--- a/pkg/eve/installer/grub.cfg
+++ b/pkg/eve/installer/grub.cfg
@@ -1,4 +1,8 @@
 function installer_submenus {
+   menuentry 'interactive mode' {
+      set_global dom0_extra_args "$dom0_extra_args interactive=true"
+   }
+
    menuentry 'force rootdelay for slow USB controllers' {
       set_global dom0_extra_args "$dom0_extra_args rootdelay=30"
    }
