Added interactive installer package in pkg/installer
Signed-off-by: Ioannis Sfakianakis <jsfakas@gmail.com>

--- a/images/rootfs.yml.in
+++ b/images/rootfs.yml.in
@@ -25,8 +25,14 @@ onboot:
     capabilities:
       - CAP_SYS_ADMIN
       - CAP_NET_ADMIN
+  # Interactive installer must preseed storage-init
+  # If you change the order of interactive-installer don't forget to
+  # change path to the "002-interactive-installer" in "pkg/mkimage-raw-efi/config"
+  - name: interactive-installer
+    image: INTERACTIVE_INSTALLER_TAG
+    command: ["/bin/sh", "-c", "/sbin/run-installer.sh </dev/console >/dev/console 2>&1"]
   # If you change the order of storage-init don't forget to
-  # change path to the "002-installer" in "pkg/mkimage-raw-efi/Dockerfile" and
+  # change path to the "003-installer" in "pkg/mkimage-raw-efi/Dockerfile" and
   # "pkg/mkverification-raw-efi/Dockerfile" accordingly:
   # storage-init must follow installer
   - name: storage-init
@@ -35,7 +41,7 @@ onboot:
   - name: kdump
     image: KDUMP_TAG
   # If you change the order of pillar-onboot don't forget to
-  # change path to the "/containers/onboot/004-pillar-onboot/lower" in
+  # change path to the "/containers/onboot/005-pillar-onboot/lower" in
   # "pkg/mkimage-raw-efi/config.json" and "pkg/mkverification-raw-efi/config.json"
   # accordingly: 004-pillar-onboot must follow the order number of pillar-onboot
   # to prepare services to start
