--- a/pkg/mkimage-raw-efi/config.json
+++ b/pkg/mkimage-raw-efi/config.json
@@ -218,9 +218,19 @@
             ]
         },
         {
+            "destination": "/opt/interactive-installer",
+            "type": "bind",
+            "source": "/containers/onboot/002-interactive-installer/tmp/upper",
+            "options": [
+                "rw",
+                "rbind",
+                "rshared"
+            ]
+        },
+        {
             "destination": "/opt/pillar",
             "type": "bind",
-            "source": "/containers/onboot/004-pillar-onboot/lower",
+            "source": "/containers/onboot/005-pillar-onboot/lower",
             "options": [
                 "rw",
                 "rbind",
