--- a/pkg/grub/rootfs-installer.cfg
+++ b/pkg/grub/rootfs-installer.cfg
@@ -194,7 +194,7 @@ function set_x86_64_baremetal {
    smbios -t 1 -s 0 --set smb_vendor
    if [ "$smb_vendor" = "HPE" ]; then
       smbios -t 1 -s 5 --set smb_product
-      if [ "$smb_product" = "ProLiant DL360 Gen10" -o "$smb_product" = "ProLiant m750 Server Blade" ]; then
+      if [ "$smb_product" = "ProLiant DL360 Gen10" ]; then
          set_global hv_platform_tweaks "$hv_platform_tweaks cmos-rtc-probe=1"
       fi
       # On m750 BAR registers are not correctly reassigned by Linux
@@ -294,14 +294,8 @@ function set_arm64_baremetal {
       set_global dom0_platform_tweaks "fbcon=map:0 eve_install_disk=nvme0n1"
       smbios -t 3 -s 8 --set asset_tag
       if regexp -- "699-.?3668-0001-.*" "$asset_tag"; then
-          if regexp -- "699-13668-0001-.*" "$asset_tag"; then
-              set_to_existing_file devicetree /boot/dtb/nvidia/tegra194-siemens-ipc520a.dtb
-              set_global dom0_console "console=tty0 earlycon=tty0"
-              set_global dom0_platform_tweaks "fbcon=map:0 pci=noaer usbcore.warm_reset_workaround=1 eve_nuke_disks=mmcblk0 eve_install_disk=nvme0n1"
-          else
-              set_to_existing_file devicetree /boot/dtb/nvidia/tegra194-p3668-0001-p3509-0000.dtb
-              set_global dom0_console "console=tty0 earlycon=tty0"
-          fi
+          set_to_existing_file devicetree /boot/dtb/nvidia/tegra194-p3668-0001-p3509-0000.dtb
+          set_global dom0_console "console=tty0 earlycon=tty0"
       else
           set_to_existing_file devicetree /boot/dtb/nvidia/tegra194-p3668-0000-p3509-0000.dtb
           set_global dom0_console "console=ttyTCU0,115200 console=tty0 earlycon=ttyTCU0,115200"
@@ -358,7 +352,7 @@ function set_kvm_boot {
    set_global load_initrd_cmd initrd
    set_global dom0_flavor_tweaks "pcie_acs_override=downstream,multifunction"
    if [ "$arch" = "x86_64" ]; then
-      set_global dom0_flavor_tweaks "$dom0_flavor_tweaks crashkernel=2G-16G:128M,16G-128G:256M,128G-:512M"
+      set_global dom0_flavor_tweaks "$dom0_flavor_tweaks crashkernel=2G-64G:128M,64G-1T:256M,1T-:512M"
    fi
    # this may strike readers as circular, but it really isn't
    # the reason we have to also set eve_flavor to kvm here is
@@ -381,7 +375,7 @@ function set_kubevirt_boot {
    set_global load_initrd_cmd initrd
    set_global dom0_flavor_tweaks "pcie_acs_override=downstream,multifunction"
    if [ "$arch" = "x86_64" ]; then
-      set_global dom0_flavor_tweaks "$dom0_flavor_tweaks crashkernel=2G-16G:128M,16G-128G:256M,128G-:512M"
+      set_global dom0_flavor_tweaks "$dom0_flavor_tweaks crashkernel=2G-64G:128M,64G-1T:256M,1T-:512M"
    fi
    # see the set_global eve_flavor kvm comment in set_kvm_boot
    set_global eve_flavor kubevirt
@@ -396,12 +390,6 @@ function set_eve_flavor {
 
 function set_getty {
       set_global dom0_extra_args "$dom0_extra_args getty"
-}
-
-function set_isolcpus {
-   # the 'inverse' is our own flag, see details here:
-   # https://github.com/lf-edge/eve-kernel/pull/90
-   set_global dom0_extra_args "$dom0_extra_args isolcpus=inverse,0 nohz_full=inverse,0"
 }
 
 set arch=${grub_cpu}
@@ -436,6 +424,17 @@ menuentry "Boot ${rootfs_title}${rootfs_title_suffix}" {
      do_if_args $load_initrd_cmd $ucode
      do_if_args $load_initrd_cmd $initrd
 }
+
+menuentry "Boot ${rootfs_title}${rootfs_title_suffix}-interactive" {
+     set_global dom0_extra_args "$dom0_extra_args interactive"
+     $load_hv_cmd $hv $hv_console $hv_platform_tweaks $hv_dom0_mem_settings $hv_dom0_cpu_settings $hv_extra_args
+     $load_dom0_cmd $dom0 $dom0_console $dom0_rootfs $hv_dom0_mem_settings $hv_dom0_cpu_settings $hv_eve_mem_settings $hv_eve_cpu_settings $hv_ctrd_mem_settings $hv_ctrd_cpu_settings $hv_watchdog_timer $dom0_platform_tweaks $dom0_flavor_tweaks $dom0_cmdline $dom0_extra_args
+     do_if_args $load_devicetree_cmd $devicetree
+     # ucode initrd image must be the first!
+     do_if_args $load_initrd_cmd $ucode
+     do_if_args $load_initrd_cmd $initrd
+}
+
 
 submenu 'Set Boot Options' {
    menuentry 'force serial console on x86/baremetal com1' {
@@ -473,10 +472,6 @@ submenu 'Set Boot Options' {
 
    menuentry 'enable getty' {
       set_getty
-   }
-
-   menuentry 'isolate CPU0 (only for PREEMPT_RT)' {
-      set_isolcpus
    }
 
    menuentry 'unset dom0_extra_args' {
